Fixed some styling and zoom issue on mobile

--- a/src/components/MovieDetails/MovieDetails.module.css
+++ b/src/components/MovieDetails/MovieDetails.module.css
@@ -92,7 +92,7 @@
   gap: 5px;
   width: 55%;
   padding: 10px;
-  -webkit-box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
   border-radius: 10px;
 }
 
@@ -106,7 +106,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  width: 40%;
+  /* width: 40%; */
 }
 
 .extraInfo_item {
